# uclv_xenomai_furuta_pendulum

./: README.md
xenopkg/: CMakeLists.txt  package.xml
xenopkg/include/xenopkg/: realtime_publisher_xeno.hpp
xenopkg/launch/: kalmancontroller.launch.py  lqrcontroller.launch.py
xenopkg/src/: energy_node.cpp  ethercat_grant.cpp  main_pendulum.cpp  pendulum_interface_node.cpp  serial_node.cpp  timer_node_rtpub.cpp  xeno_kalman_lqrcontroller.cpp  xeno_lqrcontroller.cpp  xeno_node.cpp  xeno_node_rtpub.cpp
xenopkg/src/arduinofiles/: letturaposizione.ino
xenopkg/src/meca500_ethercat_cpp_library/: .gitignore  CMakeLists.txt  CsvLoggerFeedback.cpp  CsvLoggerFeedback.hpp  Quaternion.h  README.md  Robot.cpp  Robot.hpp  UnitQuaternion.h  invertij_1colonna.h  jacobian_meca.cpp  jacobian_meca.h  joints_vel.cpp  joints_vel.h  matrix-test.cpp  matrix_tools.cpp  matrix_tools.h  test.cpp
xenopkg/src/meca500_ethercat_cpp_library/sun_etherCAT/: CMakeLists.txt  README.md
xenopkg/src/meca500_ethercat_cpp_library/sun_etherCAT/SOEM/: CMakeLists.txt
xenopkg/src/meca500_ethercat_cpp_library/sun_etherCAT/SOEM/osal/linux/: osal.c
xenopkg/src/meca500_ethercat_cpp_library/sun_etherCAT/SOEM/progetto_motore/: .goutputstream-PFINM0  CMakeLists.txt  master2.c
xenopkg/src/meca500_ethercat_cpp_library/sun_etherCAT/SOEM/soem/: ethercatcoe.c  ethercatconfig.c
xenopkg/src/meca500_ethercat_cpp_library/sun_etherCAT/src/: main_force_control.cpp  main_k_estimation.cpp  main_master.cpp  main_position_control.cpp
xenopkg/src/meca500_ethercat_cpp_library/sun_etherCAT/sun_EtherCAT_Gateway/sun_EtherCAT_Gateway/: EasyCAT_Gateway.h  sun_EtherCAT_Gateway.ino
xenopkg/src/meca500_ethercat_cpp_library/sun_etherCAT/sun_EtherCAT_Gateway/sun_EtherCAT_Gateway_flag/: sun_EtherCAT_Gateway_flag.ino
xenopkg/src/meca500_ethercat_cpp_library/sun_etherCAT/sun_EtherCAT_Gateway/sun_EtherCAT_Gateway_noPrint/: EasyCAT_Gateway.h  sun_EtherCAT_Gateway_noPrint.ino
xenopkg/src/meca500_ethercat_cpp_library/sun_etherCAT/sun_EtherCAT_Gateway/sun_EtherCAT_Gateway_versione1/: sun_EtherCAT_Gateway_versione1.ino
xenopkg/src/meca500_ethercat_cpp_library/sun_etherCAT/sun_EtherCAT_Gateway/sun_EtherCAT_Gateway_versione1/EasyCAT/: EasyCAT.h
xenopkg/src/meca500_ethercat_cpp_library/sun_etherCAT/sun_controller/: CMakeLists.txt
xenopkg/src/meca500_ethercat_cpp_library/sun_etherCAT/sun_controller/include/: Controller.h
xenopkg/src/meca500_ethercat_cpp_library/sun_etherCAT/sun_controller/src/: Controller.cpp
xenopkg/src/meca500_ethercat_cpp_library/sun_etherCAT/sun_ethercat_master/: CMakeLists.txt  config_file
xenopkg/src/meca500_ethercat_cpp_library/sun_etherCAT/sun_ethercat_master/documentation/html/: Master_8h_source.html  annotated.html  classes.html  classsun_1_1Master-members.html  classsun_1_1Master.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_func.html  graph_legend.html  index.html
xenopkg/src/meca500_ethercat_cpp_library/sun_etherCAT/sun_ethercat_master/documentation/html/search/: all_0.js  all_2.js  all_4.js  all_6.js  classes_0.js  functions_1.js  functions_2.js  functions_3.js  functions_5.js  searchdata.js
xenopkg/src/meca500_ethercat_cpp_library/sun_etherCAT/sun_ethercat_master/include/: Master.h
xenopkg/src/meca500_ethercat_cpp_library/sun_etherCAT/sun_ethercat_master/src/: Master.cpp
xenopkg/src/meca500_ethercat_cpp_library/sun_etherCAT/sun_scheduling/: CMakeLists.txt
xenopkg/src/meca500_ethercat_cpp_library/sun_etherCAT/sun_scheduling/include/: scheduling.h
xenopkg/src/meca500_ethercat_cpp_library/sun_etherCAT/sun_scheduling/src/: scheduling.c
xenopkg/src/meca500_ethercat_cpp_library/sun_etherCAT/sun_slave/: CMakeLists.txt
xenopkg/src/meca500_ethercat_cpp_library/sun_etherCAT/sun_slave/include/: ATINano43.h  Meca500.h
xenopkg/src/meca500_ethercat_cpp_library/sun_etherCAT/sun_slave/src/: ATINano43.cpp  Meca500.cpp
xenopkg_interfaces/: CMakeLists.txt  package.xml
xenopkg_interfaces/srv/: ActivateVel.srv  JointSrv.srv  SetMode.srv
